--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -19,6 +19,9 @@ dependencies:
   change_app_package_name: ^1.5.0
   rename_app: ^1.6.5
   flutter_launcher_icons: ^0.14.4
+  
+  image: ^4.5.4
+  path: ^1.9.1
 
 dev_dependencies:
   flutter_test:
